# comp0127_lab

./: README.md  read_me
cw2/: README.md
cw2/cw2q6/scripts/: cw2q6_node.py
cw2/cw2q6/src/: cw2q6_node.py
cw3/: README.md
development/cw1/: README.md
development/lab04/lab04example01/: CMakeLists.txt
development/lab04/lab04example03/: CMakeLists.txt  package.xml
development/lab04/lab04task01/: package.xml
development/lab04/lab04task02/: CMakeLists.txt
development/lab05/lab05task01/: CMakeLists.txt
development/lab06/lab06example02/: CMakeLists.txt
development/lab06/lab06task01/: CMakeLists.txt
development/lab07/lab07task01/: CMakeLists.txt
kdl_kine/src/: kdl_kine_solver.cpp
lab02/lab02_example/: package.xml
lab03/lab03_example/: CMakeLists.txt  package.xml
lab03/lab03_example_msg/: CMakeLists.txt  package.xml
lab03/lab03_example_srv/: CMakeLists.txt  package.xml
lab04/lab04example01/: package.xml
lab04/lab04example03/: CMakeLists.txt  package.xml
lab04/lab04example03/launch/: lab04example03cpp.launch
lab04/lab04example03/src/: lab04example03_node.cpp
lab04/lab04task01/: CMakeLists.txt
lab04/lab04task02/: package.xml
lab05/lab05example01/: CMakeLists.txt  package.xml
lab05/lab05task01/: package.xml
lab06/lab06example02/: package.xml
lab06/lab06task01/: package.xml
lab08/lab08example/: CMakeLists.txt  package.xml  setup.py
lab09/lab09example01/: CMakeLists.txt
lab09_solution/lab09task01/: CMakeLists.txt  package.xml
lab10/lab10example01/: CMakeLists.txt  package.xml
lab_manuals/: Lab_06_jacobien_with_KDLs.md
(+84 files in other folders)
